product_docs/docs/pem/10/pem_rest_api/v6/import-custom-probes.mdx
---
navTitle: Import Custom Probes
pdfExclude: true
title: 'EDB Postgres Enterprise Manager REST APIs v6.0: Import Custom Probes'

---



## `post__probe_custom_import_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X POST https://PEM-SERVER-IP/pem/api/v6/probe/custom/import/ \
  -H 'Content-Type: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Content-Type': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.post('https://PEM-SERVER-IP/pem/api/v6/probe/custom/import/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript
const inputBody = '{
  "version": 1,
  "skip_overwrite": true,
  "probes": [
    {
      "probe_name": "string",
      "collection_method": "w",
      "enabled": true,
      "target_type": 0,
      "any_server_version": true,
      "interval": 0,
      "lifetime": 0,
      "discard_history": true,
      "platform": "string",
      "probe_code": "string",
      "probe_columns": [
        {
          "pc_name": "string",
          "pc_data_type": "bigint",
          "pc_unit": "string",
          "pc_col_type": "m",
          "pc_graphable": true,
          "pc_calc_pit": true,
          "pc_pit_default": true
        }
      ],
      "alternate_code": [
        {
          "server_version_id": 0,
          "server_probe_code": "string"
        }
      ],
      "internal_name": "string"
    }
  ]
}';
const headers = {
  'Content-Type':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v6/probe/custom/import/',
{
  method: 'POST',
  body: inputBody,
  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`POST /probe/custom/import/`

Import custom probes using exported probes

**Body parameter**

```json
{
  "version": 1,
  "skip_overwrite": true,
  "probes": [
    {
      "probe_name": "string",
      "collection_method": "w",
      "enabled": true,
      "target_type": 0,
      "any_server_version": true,
      "interval": 0,
      "lifetime": 0,
      "discard_history": true,
      "platform": "string",
      "probe_code": "string",
      "probe_columns": [
        {
          "pc_name": "string",
          "pc_data_type": "bigint",
          "pc_unit": "string",
          "pc_col_type": "m",
          "pc_graphable": true,
          "pc_calc_pit": true,
          "pc_pit_default": true
        }
      ],
      "alternate_code": [
        {
          "server_version_id": 0,
          "server_probe_code": "string"
        }
      ],
      "internal_name": "string"
    }
  ]
}
```

<span id="post__probe_custom_import_-parameters"></span>

### Parameters



| Name         | In     | Type                                                            | Required | Description            |
| ------------ | ------ | --------------------------------------------------------------- | -------- | ---------------------- |
| X-Auth-Token | header | string                                                          | true     | Token of authorization |
| body         | body   | [CustomProbeImportData](schemas.mdx#tocs_customprobeimportdata) | true     | none                   |

<span id="post__probe_custom_import_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | None   |

!!! info

    This operation does not require authentication




<span id="edb-postgres-enterprise-manager-rest-apis-probe-configuration"></span>
